fix(backend): expand cors allowed origin patterns and expose headers
Allow localhost and 127.0.0.1 on development ports.

Expose Authorization and Content-Disposition headers.